--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- Start p1 of Background -->
     <section class="container" id="background">
-        <h1 class="note" style="color:white;font-size:6rem;">Background</h1>
+        <h1 class="note" style="font-size:6rem;">Background</h1>
         <div class="row">
             <div class="column1" id="bgimg1">
                 <div class="bgcontent frame">
@@ -254,7 +254,7 @@
     <!-- End p5 of Background -->
     <!-- Start Case Study -->
     <section class="container" id="race">
-        <h1 class="note" style="color:white;font-size:6rem;">Case Study (NYC)</h1>
+        <h1 class="note" style="font-size:6rem;">Case Study (NYC)</h1>
         <div class="row">
             <div class="column1 frame" id="racemap"></div>
             <div class="column2">
@@ -268,7 +268,7 @@
     <!-- End Case Study -->
 
     <section class="container" id="information">
-        <h1 class="note" style="color:white;font-size:6rem;">Information</h1>
+        <h1 class="note" style="font-size:6rem;">Information</h1>
         <div class="row">
             <div class="column1 frame" id="infomap"></div>
             <div class="column2">
@@ -290,7 +290,7 @@
     </section>
 
     <section class="container" id="physical">
-        <h1 class="note" style="color:white;font-size:6rem;">Physical</h1>
+        <h1 class="note" style="font-size:6rem;">Physical</h1>
         <div class="row">
             <div class="column1 frame" id="physmap">
                 <div class="buttons">
@@ -319,7 +319,7 @@
     </section>
 
     <section class="container" id="conclusion">
-        <h1 class="note" style="color:white;font-size:6rem;">Conclusion</h1>
+        <h1 class="note" style="font-size:6rem;">Conclusion</h1>
         <div class="row">
             <div class="column1 frame" id="concmap">
                 <div class="buttons">
